# rescan

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: database.py  main.py  plex.py  settings.py
