[project]
name = "rescan"
version = "0.1.0"
description = "Scanner utility for Plex media libraries"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "plexapi>=4.17.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "watchdog>=6.0.0",
]
